--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap-switch": "^15.5.3",
     "react-bootstrap-wizard": "0.0.7",
     "react-chartjs-2": "^2.9.0",
+    "react-chat-window": "^1.2.1",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
@@ -30,7 +31,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
-    "react-table": "^7.0.0-rc.15",
+    "react-table": "^6.8.6",
+    "react-table-6": "^6.11.0",
     "react-tagsinput": "^3.19.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
