--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
+    "expo": "^36.0.2",
     "history": "^4.10.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
@@ -26,8 +27,13 @@
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
     "react-jvectormap": "0.0.15",
+    "react-native": "^0.61.5",
+    "react-native-casino-roulette": "^1.6.0",
+    "react-native-web": "^0.12.0",
     "react-notification-alert": "0.0.12",
     "react-redux": "^7.1.3",
+    "react-roulette": "0.0.1",
+    "react-roulette-game": "^1.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
@@ -39,7 +45,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.15",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "styled-jsx": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
