--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "game",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": " node server.js NODE_ENV=development",
@@ -23,10 +22,23 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.10",
     "npx": "^10.2.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "reactstrap": "^8.4.1",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vale314/game.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/vale314/game/issues"
+  },
+  "homepage": "https://github.com/vale314/game#readme",
+  "description": ""
 }
