--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap-wizard": "0.0.7",
     "react-chartjs-2": "^2.9.0",
     "react-chat-window": "^1.2.1",
+    "react-compound-timer": "^1.1.15",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
